@@ -42,7 +42,8 @@ pgp = ["gpg"]
 paramiko = ["paramiko"]
 dev = [
     "ruff==0.11.11",
-    "mypy==1.15.0"
+    "mypy==1.15.0",
+    "dissolve"
 ]
 merge = ["merge3"]
 
