@@ -37,6 +37,8 @@
 
  * Update working tree in pull. (Jelmer Vernooĳ, #452)
 
+ * Use ``dissolve`` to manage deprecations. (Jelmer Vernooĳ)
+
 0.22.8	2025-03-02
 
  * Allow passing in plain strings to ``dulwich.porcelain.tag_create``
